fixed the name colour on small screen

--- a/src/temp.scss
+++ b/src/temp.scss
@@ -222,7 +222,7 @@ header .img-container img {
     font-size: 15vw;
     line-height: 0.9;
     -webkit-text-stroke-width: 3px;
-    -webkit-text-stroke-color: rgb(165, 10, 10);
+    -webkit-text-stroke-color: rgb(255, 255, 255);
     -webkit-text-fill-color: transparent;
   }
 }
